--- a/view/index.html
+++ b/view/index.html
@@ -5,45 +5,57 @@
   <title>Vue</title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-
-  <!-- navigation bar -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <a class="navbar-brand"><i class="glyphicon glyphicon-bullhorn"></i> Vue Events Bulletin Board</a>
-    </div>
+  <nav id="example">
+    <navgation-top></navgation-top>
   </nav>
+  <main>
+  <likes></likes>
+<template id="yourwish">
+ <div>
+  <button v-on:click="counter += 1">Add 1</button>
+  <p>The button above has been clicked {{ counter }} times.</p>
+ </div>
+</template>
+    
+  </main>
+
+
+    <template id="navigation">
+      <div>
+        <div id="custom-bootstrap-menu" class="navbar navbar-default " role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header"><a class="navbar-brand" href="#">Brand</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse navbar-menubuilder">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="/">Home</a>
+                </li>
+                <li><a href="/products">Products</a>
+                </li>
+                <li><a href="/about-us">About Us</a>
+                </li>
+                <li><a href="/contact">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+     </div>
+    </template>
+    
+
 
   <!-- main body of our application -->
-  <div class="container" id="events">
-
-    <!-- add an event form -->
-    <div class="col-sm-6">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3>Add an Event</h3>
-        </div>
-        <div class="panel-body">
-
-        </div>
-
-      </div>
-    </div>
-
-    <!-- show the events -->
-    <div class="col-sm-6">
-      <div class="list-group">
-
-      </div>
-    </div>
-  </div>
 
   <!-- JS -->
-  <script src="node_modules/vue/dist/vue.js"></script>
-  <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../node_modules/vue-resource/dist/vue-resource.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
